apps/chat/app/styles/main.scss
$deepBlue-20: #CCCED5;
$deepBlue-40: #999EAC;
$deepBlue-60: #666D82;
$deepBlue-80: #333D59;
$deepBlue-100: #000C2F;
$deepBlue-120: #000923;

$studioGray-20: #F4F4F5;
$studioGray-40: #E8E9EB;
$studioGray-60: #DDDEE0;
$studioGray-80: #D1D3D6;
$studioGray-100: #C6C8CC;
$studioGray-120: #959699;

$blue-20: #D8F5FF;
$blue-40: #B2EBFE;
$blue-60: #8BE1FE;
$blue-80: #65D7FD;
$blue-100: #3ECDFD;
$blue-120: #2F9ABE;

$red-20: #FEDAD2;
$red-40: #FEB5A5;
$red-60: #FD9078;
$red-80: #FD6B4B;
$red-100: #FC461E;
$red-120: #BD3516;

$red: #F44336;
$matBlue: #2E90EB;

$green-color: #4CAF50;
$red-color: #FC461E; 
$yellow-color: #FFCA28; 

$swipes-shadow-one: 0 1px 3px rgba(0,0,0,0.06), 0 1px 2px rgba(0,0,0,0.12);
$swipes-shadow-two: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
$swipes-shadow-three: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
$swipes-shadow-four: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
$swipes-shadow-five: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);

$break-small: 400px;
$break-mid: 650px; 


html, body, #content {
	height:100%;
	font-family: 'Roboto';
	line-height: 1.4;
}
#content{
	background-color: #FAFAFA;
	padding-bottom: 65px;
	
	@media screen and (max-width: $break-mid) {
		padding-bottom: 60px;
	}
	
}
.chat-list-container{
	height:100%;
	overflow-y: scroll;
	overflow-x: hidden;
	background-color: #FAFAFA;
}

.chat-list {
	max-width: 650px;
	margin: 0 auto;
}

.section {
	width: 100%;
	
	.chat-date-line {
		height: 50px;
		width: calc(100% - 60px);
		margin-left: 30px;
		display: flex;
		align-items: center;
		justify-content: center;
		position: relative;
		
		.line {
			width: 100%;
			height: 1px;
			background-color: $studioGray-60;
		}
		
		.date {
			position: absolute;
			line-height: 50px;
			font-weight: 300;
			color: $studioGray-100;
			width: 100%;
			text-align: center;
			left: 0;
			
			span {
				padding: 0 15px;	
				background-color: #FAFAFA;		
			}
		}
	}
}

.chat-wrapper {
	width: 100%;
	max-width: 650px;
	margin: 15px auto;
	position: relative;
	display: flex;
	//flex-wrap: wrap;
	align-items: strech;
	padding-bottom: 20px;
}

.avatar {
	height: 100%;
	align-self: flex-end;
	
	img {
		min-width: 40px !important;
		border-radius: 50%;
	}
}

.chat-messages {
	width: 100%;
	max-width: calc(650px - 70px);
	display: flex;
	flex-direction: column;
	
	.message-wrapper {
		min-height: 40px;
		display: flex;
		align-items: center;
		padding: 0 20px;
		
		.message {
			margin: 2px 0;;
			padding: 10px 15px;
			background-color: #F0F0F0;
			border-radius: 0px;
			border-top-right-radius: 15px;
			border-bottom-right-radius: 15px;
			color: $deepBlue-100;
			font-size: 14px;
			//box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
		}
		
		&:last-child {
			
			.message {
				border-top-left-radius: 0px;
				border-bottom-left-radius: 15px;
			}
		}
		
		&:first-child {
			
			.message {
				border-top-left-radius: 15px;
				border-bottom-left-radius: 0px;
			}
			
			&:last-child {
			
				.message {
					border-bottom-left-radius: 15px;
					border-top-left-radius: 15px;
				}
			}
		}
		
	}
}

.chat-wrapper {
	
	&.me {
		justify-content: flex-end;
		
		.document-card {
			margin-right: 20px;
		}
		
		.avatar {
			order: 2;
		}
		
		.message-details {
			left: auto;
			right: 70px;
		}
		
		.chat-messages {
			order: 1;
			
			.message-wrapper {
				display: flex;
				justify-content: flex-end;
				
				.message {
					background-color: #9EF2C3;
					text-align: right;
					position: relative;
					border-top-right-radius: 0px;
					border-bottom-right-radius: 0px;
					border-top-left-radius: 15px;
					border-bottom-left-radius: 15px;
				}
				
				&:last-child {
			
					.message {
						border-top-left-radius: 15px;
						border-top-right-radius: 0px;
						border-bottom-right-radius: 15px;
					}
				}
				
				&:first-child {
					
					.message {
						border-top-right-radius: 15px;
						border-bottom-left-radius: 15px;
						border-bottom-right-radius: 0px;
					}
					
					&:last-child {
					
						.message {
							border-bottom-left-radius: 15px;
							border-bottom-right-radius: 15px;
							border-top-left-radius: 15px;
							border-top-right-radius: 15px;
						}
					}
				}
			}
		}
	}
}

.message-details {
	position: absolute;
	left: 0;
	bottom: 0;
	color: rgba(0,0,0,.4);
	margin-left: 70px;
	font-size: 12px;
	
	&.right-side-details {
		left: auto;
		right: 0 !important;
	}
}

.document-card {
	max-width: 400px;
	margin-left: 20px;
	background-color: white;
	border-radius: 5px;
	padding-bottom: 15px;
	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
	display: flex;
	flex-wrap: wrap;
	position: relative;
	
	&:after {
		content: "";
		position: absolute;
		width: 100%;
		height: 100px;
		left: 0;
		bottom: 15px;
		//background: linear-gradient(to top, rgba(255,255,255,1) 0%, transparent 100%);
	}
	
	.document-content {
		width: 100%;
		
		.title {
			padding: 15px 20px;
			font-size: 18px;
			color: $deepBlue-100;
			cursor: pointer;
		}
		
		.content {
			padding: 0 20px;
			font-size: 14px;
			color: rgba($deepBlue-100, .9);
			line-height: 1.4;
		}
	}
}

.image-card {
	max-width: 200px;
	margin-left: 20px;
	background-color: white;
	border-radius: 5px;
	//padding-bottom: 15px;
	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
	display: flex;
	flex-wrap: wrap;
	position: relative;
	//overflow: hidden;
	cursor: pointer;
		
		.img-wrap {
			max-width: 200px;
			max-height: 200px;
			cursor: pointer;
			border-top-left-radius: 5px;
			border-top-right-radius: 5px;
			overflow: hidden;
			
			img {
				width: 100%;
			}
		}
		
		.title {
			padding: 15px 20px;
			font-size: 14px;
			color: $deepBlue-100;
			cursor: pointer;
		}
}

.input-container {
	width: 100%;
	max-width: 650px;
	left: 50%;
	transform: translateX(-50%) translateY(-5px);
	position: fixed;
	bottom: 0;
	background-color: #FAFAFA;
	border: 2px solid $studioGray-60;
	border-radius: 10px;
	transition: .2s ease-in-out;
	
	@media screen and (max-width: $break-mid) {
		transform: translateX(-50%) translateY(0px);
		border-radius: 0px;
		border: none;
		border-top: 2px solid $studioGray-60;
	}
	
	&.show-hint {
		
		//padding-top: 15px;
		transition: .2s ease-in-out;
		
		.hint {
			font-size: 10px;
			transform: translateY(-12px) translateX(-15px);
			transition: .2s ease-in-out;
		}
	}
	
	.hint {
		position:absolute; 
		//height: 100%;
		top: 0;
		font-weight: 500;
		color: $studioGray-120;
		font-size: 14px;
		padding: 15px 25px;
		padding-top: 20px;
		padding-left: 65px;
		transition: .2s ease-in-out;
		display: flex;
		align-items: center;
		justify-content: center;
		z-index: 1;
	}
	
	textarea {
		padding: 15px 25px;
		padding-left: 51px;
		padding-top: 20px;
		width: 100%;
		font-family: 'Roboto';
		font-weight: 500;
		color: $deepBlue-100;
		font-size: 14px;
		resize: none;
		outline: none;
		position: relative;
		z-index: 2;
	}
	
	i.chat-input-attach-icon {
		position: absolute;
		height: 100%;
		line-height: 58px;
		font-size: 20px;
		width: 51px;
		text-align: center;
		color: $studioGray-120;
		cursor: pointer;
		z-index: 3;
		transition: .1s ease-in-out;
		
		&:hover {
			color: $deepBlue-80;
			transition: .1s ease-in-out;
		}
	}
}

@keyframes newMessageLeft {
	0% {
		transform: translateY(20px) scale(.5); 
		opacity: 0; 
		transform-origin: 0% 100%;
	}
	100% {
		transform: translateY(0px) scale(1); 
		opacity: 1; 
		transform-origin: 0% 100%;}
}

@keyframes newMessageRight {
	0% {
		transform: translateY(20px) scale(.5); 
		opacity: 0; 
		transform-origin: 100% 100%;
	}
	100% {
		transform: translateY(0px) scale(1); 
		opacity: 1; 
		transform-origin: 100% 100%;}
}

